k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: petclinic
  labels:
    app: petclinic
spec:
  selector:
    app: petclinic
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
